@@ -1,3 +1,11 @@
+2007-09-18  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Patrick Wade <patrick.wade@sun.com>
+
+	* main.c: (close_logout_update), (setup_dialog): make logout button
+	sensitive whenever accessibility settings have been enabled or
+	disabled (closes bug #476921)
+
 2007-06-02  Jens Granseuer  <jensgr@gmx.net>
 
 	* at-startup-session.c:
